--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('../src/vendor/normalize.css');
+@import url('../src/vendor/fonts/fonts.css');
+/* vendor css */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  --max-width-desktop: 1920px;
+  --max-header-width-desktop: 1280px;
+  --max-content-width-desktop: 1240px;
+  --main-background: #131316;
+  --header-background: #1C1C21;
 }
