--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,6 +1,6 @@
 .main {
   margin: 0 auto;
-  max-width: 1240px;
+  max-width: var(--max-content-width-desktop);
   background-color: var(--main-background);
   color: aliceblue;
 }
