--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -7,10 +7,10 @@
 .headerContainer {
   margin: 0 auto;
   width: 100%;
-  max-width: var(--max-width-header-desktop);
+  max-width: var(--max-header-width-desktop);
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .navigationList {
@@ -37,5 +37,5 @@
 }
 
 .logo {
-  margin: 0 190px 0 112px;
+  margin: 0 190px 0 152px;
 }
