--- a/src/components/burger-ingredient/burger-ingredient.module.css
+++ b/src/components/burger-ingredient/burger-ingredient.module.css
@@ -1,3 +1,16 @@
-.ingredient{
-  
+.ingredient__сard {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+}
+
+.price__сontainer {
+  display: flex;
+  justify-content: center;
+}
+
+.name {
+  text-align: center;
 }
