--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,5 +1,4 @@
 .header {
-  margin: 0 auto;
   max-width: var(--max-width-desktop);
   background-color: var(--header-background);
 }
@@ -8,16 +7,14 @@
   margin: 0 auto;
   width: 100%;
   max-width: var(--max-header-width-desktop);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .navigation__list {
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  align-items: center;
+  grid-template-columns: max-content max-content 1fr max-content;
   list-style: none;
 }
 
@@ -29,13 +26,13 @@
   cursor: pointer;
   background: transparent;
   color: inherit;
-  font: inherit;
 }
 
 .navigation__button:hover {
   opacity: 0.8;
 }
 
-.logo {
-  margin: 0 190px 0 152px;
+.header__logo {
+  display: flex;
+  justify-content: center;
 }
