--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -13,7 +13,7 @@
 }
 
 .ingredients__list {
-  max-height: calc(100vh - 250px) !important;
+  max-height: calc(100vh - 250px);
   overflow-y: scroll;
   overflow-x: hidden;
 }
