--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -2,4 +2,7 @@
   margin: 0 auto;
   max-width: var(--max-content-width-desktop);
   background-color: var(--main-background);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 40px;
 }
