--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -7,11 +7,15 @@
   column-gap: 40px;
 }
 
+.scroll::-webkit-scrollbar {
+  width: 8px;
+  background: #2f2f37;
+}
+
 .scroll::-webkit-scrollbar-thumb {
   background: #8585ad;
 }
 
-.scroll::-webkit-scrollbar {
-  width: 8px;
-  background: #2f2f37;
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: #8b8bcf;
 }
