--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -13,7 +13,12 @@
   box-shadow: rgba(76, 76, 255, 0.5) -5px 5px 250px 90px;
   border: 2px solid #4c4cff;
   border-radius: 40px;
+  transition: visibility 0.3s 0s, opacity 0.3s 0s linear;
 }
+
+/* .modal_closed {
+  opacity: 0;
+} */
 
 .closeIcon {
   position: absolute;
