feat: функционал наполнения попапов

--- a/src/components/order-summary/order-summary.module.css
+++ b/src/components/order-summary/order-summary.module.css
@@ -5,20 +5,7 @@
   align-items: center;
 }
 
-.orderNumber {
-}
-
-.title {
-}
-
-.subtitle {
-}
-
-.image {
+.order__image {
   width: 120px;
   height: 120px;
-}
-
-.description {
-
 }
