--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -7,8 +7,8 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  width: 720px;
-  height: 718px;
+  max-width: 720px;
+  max-height: 718px;
   background: var(--main-background);
   box-shadow: rgba(76, 76, 255, 0.5) -5px 5px 250px 90px;
   border: 2px solid #4c4cff;
@@ -20,7 +20,7 @@
   opacity: 0;
 } */
 
-.closeIcon {
+.modal__closeIcon {
   position: absolute;
   top: 0;
   right: 0;
