--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,9 +1,10 @@
-.main {
+.page {
+  position: relative;
   margin: 0 auto;
   max-width: var(--max-content-width-desktop);
   background-color: var(--main-background);
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 40px;
 }
 
