--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -6,7 +6,6 @@
 .constructor__bunTop {
   display: flex;
   justify-content: flex-end;
-  margin-bottom: auto;
   cursor: pointer;
 }
 
@@ -17,22 +16,22 @@
   cursor: pointer;
 }
 
-.constructor__elementList {
+.constructor__nonBunElements {
   margin: 0;
-  padding: 0;
+  padding-left: 0;
+  padding-right: 0;
   max-height: calc(100vh - 520px);
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
-.constructor__element {
+.constructor__nonBunElement {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   cursor: pointer;
 }
 
-.constructor__element:last-of-type {
+.constructor__nonBunElement:last-of-type {
   margin-bottom: 0;
 }
 
