--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,6 +1,3 @@
-.ingredients__container {
-}
-
 .ingredients__tabContainer {
   margin: 0;
   padding: 0;
@@ -12,7 +9,7 @@
 
 .ingredients__list {
   max-height: calc(100vh - 280px);
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
