--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -4,16 +4,23 @@
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
   max-width: 720px;
   max-height: 718px;
   background: var(--main-background);
-  box-shadow: rgba(76, 76, 255, 0.5) -5px 5px 250px 90px;
-  border: 2px solid #4c4cff;
+  /* box-shadow: rgba(76, 76, 255, 0.5) -5px 5px 250px 90px; */
+  /* border: 2px solid #4c4cff; */
   border-radius: 40px;
   transition: visibility 0.3s 0s, opacity 0.3s 0s linear;
+}
+
+.modal__title {
+  align-self: flex-start;
+  transform: translate(-50px);
+  color: red;
 }
 
 /* .modal_closed {
