--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,5 @@ body {
   --main-background: #131316;
   --header-background: #1C1C21;
   --modal-background: #000;
+  --link-text-color-primary: #fff;
 }
