--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -14,7 +14,7 @@
   border-radius: 40px;
   /* background: var(--modal-background);
   box-shadow: rgba(76, 76, 255, 0.5) -5px 5px 150px 50px; 
-  border: 2px solid rgba(76, 76, 255); */
+  border: 2px solid var(--interface-accent); */
 }
 
 .modal__title {
