--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   --max-header-width-desktop: 1280px;
   --max-content-width-desktop: 1240px;
   --main-background: #131316;
-  --header-background: #1C1C21;
+  --header-background: #1c1c21;
   --modal-background: #000;
+  --interface-accent: #4c4cff;
   --link-text-color-primary: #fff;
 }
