--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   max-width: 720px;
   max-height: 718px;
-  background: var(--main-background);
+  background: var(--modal-background);
   border-radius: 40px;
   /* background: var(--modal-background);
   box-shadow: rgba(76, 76, 255, 0.5) -5px 5px 150px 50px; 
