--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -10,6 +10,7 @@
 .ingredients__list {
   position: relative;
   max-height: calc(100vh - 280px);
+  height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
 }
