--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,6 @@
   --header-background: #1c1c21;
   --modal-background: #1c1c21;
   --interface-accent: #4c4cff;
+  --interface-error: #ee3737;
   --link-text-color-primary: #fff;
 }
