feat: create HomePage and LoginPage components

--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,4 +1,4 @@
-.page {
+/* .page {
   position: relative;
   margin: 0 auto;
   max-width: var(--max-content-width-desktop);
@@ -20,4 +20,4 @@
 
 .scroll::-webkit-scrollbar-thumb:hover {
   background: #8b8bcf;
-}
+} */
