--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -16,6 +16,10 @@
   box-sizing: border-box;
 }
 
+.ingredient__title {
+  align-self: center;
+}
+
 .ingredient__compounds {
   max-width: 520px;
   display: grid;
