--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,7 @@
   --interface-error: #ee3737;
   --link-text-color-primary: #F2F2F3;
   --link-text-color-secondary: #8585AD;
+  --order-item-status-progress: #00CCCC;
+  --order-item-status-cancel: #ee3737;
+  --order-item-background: #1c1c21;
 }
