--- a/src/components/order-item/order-item.module.css
+++ b/src/components/order-item/order-item.module.css
@@ -24,11 +24,19 @@
 }
 
 .orderItem__images {
+  position: relative;
   padding: 0;
   margin: 0;
   display: flex;
   flex-direction: row;
   list-style: none;
+}
+
+.orderItem__imagesCount {
+  content: '';
+  position: absolute;
+  top: 18px;
+  left: 264px;
 }
 
 .orderItem__imageOverlay {
@@ -37,7 +45,33 @@
   border-radius: 50%;
   width: 64px;
   height: 64px;
+  z-index: 5;
+}
+
+.orderItem__imageOverlay:nth-of-type(2) {
+  transform: translate(-15px);
+  z-index: 4;
+}
+
+.orderItem__imageOverlay:nth-of-type(3) {
+  transform: translate(-30px);
+  z-index: 3;
+}
+
+.orderItem__imageOverlay:nth-of-type(4) {
+  transform: translate(-45px);
+  z-index: 2;
+}
+
+.orderItem__imageOverlay:nth-of-type(5) {
+  transform: translate(-60px);
   z-index: 1;
+}
+
+.orderItem__imageOverlay:nth-of-type(6) {
+  transform: translate(-75px);
+  z-index: 0;
+  opacity: 0.6;
 }
 
 .orderItem__imageOverlay::before {
@@ -56,7 +90,7 @@
   width: 64px;
   height: 64px;
   border-radius: 50%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .orderItem__price {
