--- a/src/components/orders-list/orders-list.module.css
+++ b/src/components/orders-list/orders-list.module.css
@@ -1,2 +1,8 @@
-export {
+.orders__list {
+  position: relative;
+  max-height: calc(100vh - 280px);
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  list-style: none;
 }
