--- a/src/components/orders-dashboard/orders-dashboard.module.css
+++ b/src/components/orders-dashboard/orders-dashboard.module.css
@@ -1,7 +1,7 @@
 .dashboard {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 260px);
   column-gap: 36px;
 }
 
@@ -20,6 +20,7 @@
 }
 
 .dashboard__number {
+  align-self: flex-start;
   display: block;
 }
 
