--- a/src/components/orders-list/orders-list.module.css
+++ b/src/components/orders-list/orders-list.module.css
@@ -2,6 +2,7 @@
   position: relative;
   max-height: calc(100vh - 230px);
   height: 100vh;
+  grid-column: 1;
   overflow-y: auto;
   overflow-x: hidden;
   list-style: none;
