--- a/src/components/order-item/order-item.module.css
+++ b/src/components/order-item/order-item.module.css
@@ -2,6 +2,7 @@
   background: var(--order-item-background);
   border-radius: 40px;
   list-style: none;
+  cursor: pointer;
 }
 
 .orderItem__header {
