--- a/src/components/order-contents/order-contents.module.css
+++ b/src/components/order-contents/order-contents.module.css
@@ -1,4 +1,6 @@
 .orderContents__container {
+  width: 100%;
+  height: 100%;
   background: var(--order-item-background);
   border-radius: 40px;
   list-style: none;
@@ -20,6 +22,10 @@
 .orderContents__ingredients {
   display: flex;
   flex-direction: column;
+  min-width: 640px;
+  max-height: 320px;
+  overflow-y: auto;
+  overflow-x: hidden;
   list-style: none;
 }
 
