--- a/src/pages/ingredient.module.css
+++ b/src/pages/ingredient.module.css
@@ -1,8 +1,8 @@
 .indredient__container {
   height: 100vh;
-  max-height: calc(100vh - 200px);
+  max-height: calc(100vh - 450px);
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
