--- a/src/pages/order-contents.module.css
+++ b/src/pages/order-contents.module.css
@@ -1,7 +1,8 @@
 .order__container {
-  padding-top: 90px;
+  padding-top: 80px;
   display: flex;
   height: 100vh;
+  max-height: calc(100vh - 450px);
   max-width: 640px;
   margin: 0 auto;
 }
