--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   max-height: calc(100vh - 340px);
+  width: 100%;
   height: 100vh;
   border-radius: 1%;
 }
@@ -28,6 +29,7 @@
 }
 
 .constructor__nonBunElements {
+  width: 100%;
   height: 100%;
   margin: 0;
   padding-left: 0;
