--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,5 @@
   --link-text-color-secondary: #8585AD;
   --order-item-status-progress: #00CCCC;
   --order-item-status-cancel: #ee3737;
-  --order-item-background: #16161a;
+  --order-item-background: #1c1c21;
 }
